--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     <div class="container">
       <div class="card" id="introduction">
-        <h1>Hello, I'm Sarah 🙃</h1>
-        <img src="images/IMG_4206.JPG" class="img-circle" width="130px" height="130px"alt="Picture of Sarah">
-        <p>I am an ex-audio engineer learning how to program.</p>
+        <h1>Hello, I'm Sarah!</h1>
+        <img src="images/IMG_avatar_sarah.JPG" class="img-circle" width="145px" height="130px"alt="Picture of Sarah">
+        <p>I am a broke musician learning how to program.</p>
         <a href="" id="btn-white">Discover my projects</a>
       </div>
 
@@ -28,12 +28,12 @@
           </li>
           <li>
             <a href="https://www.facebook.com/sarah.ma.35110" target="blank">
-              <i class="fab fa-facebook"></i>
+              <i class="fab fa-facebook-square"></i>
             </a>
           </li>
           <li>
             <a href="https://www.linkedin.com/in/sarah-ma-a004b6126/" target="blank">
-              <i class="fab fa-linkedin-in"></i>
+              <i class="fab fa-linkedin"></i>
             </a>
           </li>
         </ul>
